--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Favicon -->
+		<link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+		<link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
 
 		<!-- Bootstrap CSS -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -379,13 +382,13 @@
                                         
                                         <div class="col-lg-6 col-md-12">
                                             <div class="tabs_item_content">
-                                                <h3>Welcome to Radiology Department</h3>
-                                                <p>This department provides medical care to patients who have problems with their heart or circulation. It treats people on an inpatient and outpatient basis.</p>
+                                                <h3>MAG C PLUS </h3>
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aut labore veritatis quas accusamus, nihil eligendi modi reprehenderit ratione minima.</p>
                                                 <ul>
-                                                    <li>Electrocardiogram (ECG)</li>
-                                                    <li>Echocardiograms (ultrasound scan of the heart)</li>
-                                                    <li>24-hour blood pressure tests</li>
-                                                    <li>Electrocardiogram (ECG)</li>
+                                                    <li>Lorem ipsum dolor sit amet.</li>
+                                                    <li>Lorem ipsum dolor sit amet.</li>
+                                                    <li>Lorem ipsum dolor sit amet.</li>
+                                                    <li>Lorem ipsum dolor sit amet.</li>
                                                 </ul>
                                                 <!-- <a href="#" class="btn">Appointment Now</a> -->
                                             </div>
@@ -642,11 +645,10 @@
 		<!-- End Fun Facts Area -->
 		
 		<!-- Start Gallery Area -->
-		<section id="gallery" class="gallery-area ptb-100 bg-f9faff">
+		<!-- <section id="gallery" class="gallery-area ptb-100 bg-f9faff">
 		    <div class="container">
                 <div class="section-title">
                     <h3>Photo Gallery</h3>
-                    <!-- <span>Which Services We Provide</span> -->
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 
@@ -658,7 +660,6 @@
                             <button class="filter" data-filter=".neurology">Staffs</button>
                             <button class="filter" data-filter=".sergury">Warehouses</button>
                             <button class="filter" data-filter=".orthopaedics">Logistics</button>
-                            <!-- <button class="filter" data-filter=".urology">Urology</button> -->
                         </div>
                     </div>
                 </div>
@@ -739,7 +740,7 @@
                     </div>
                 </div>
 		    </div>
-		</section>
+		</section> -->
 		<!-- End Gallery Area -->
 		
 		<!-- Start Pricing Area -->
